styling messages with semantic ui react

--- a/chat-app/src/components/ChatPanel/SendMessage.css
+++ b/chat-app/src/components/ChatPanel/SendMessage.css
@@ -1,10 +1,11 @@
 .SendMessage {
   display: flex;
-  /* background-color: #fefefe; */
   padding : 5px;
 }
 
 
 .SendMessage > input{
-    flex-grow: 1
+    flex-grow: 1;
+    padding: 5px;
+    margin-right: 10px;
 }
