add userMenu and add possibility to register

--- a/chat-app/src/components/Auth/Login.css
+++ b/chat-app/src/components/Auth/Login.css
@@ -6,3 +6,11 @@
   align-items: center;
   justify-content: center;
 }
+
+.Login > div{
+  width:450px;
+}
+
+.Login , .message{
+  text-align: center
+}
